[package]
name = "mil_std_1553b"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "MIL STD 1553B message parsing and types"
authors = ["Michael House <mjhouse@protonmail.com>"]
repository = "https://github.com/mjhouse/mil_std_1553b"
keywords = [
    "1553", 
    "aerospace", 
    "military", 
    "parser",
    "embedded"
]
categories = [
    "embedded",
    "aerospace::protocols",  
    "no-std::no-alloc", 
    "parser-implementations"
]

[dev-dependencies]
rstest = "0.18.2"
