[package]
name = "mil_std_1553b"
version = "0.5.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "MIL STD 1553B message parsing and types"
authors = ["Michael House <mjhouse@protonmail.com>"]
repository = "https://github.com/mjhouse/mil_std_1553b"
keywords = [
    "1553", 
    "aerospace", 
    "military", 
    "parser",
    "embedded"
]
categories = [
    "embedded",
    "aerospace::protocols",  
    "no-std::no-alloc", 
    "parser-implementations"
]

[features]
derive = [ "dep:mil_std_1553b_derive" ]

[dependencies]
mil_std_1553b_derive = { version = "0.5.0", optional = true }

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
indoc = "2.0.5"
indexmap = { version = "2.2.6", features = ["serde"] }

[[example]]
name = "custom"
required-features = [ "derive" ]

[[example]]
name = "simple"
