[package]
name = "mil_std_1553b_derive"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "MIL STD 1553B proc macros"
authors = ["Michael House <mjhouse@protonmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro-error = "1.0.4"